# library-L

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LEARNING_PATH.md  README.md  SCAFFOLD.md  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app_main.py
app/agents/: __init__.py  config.py  graph.py  llm.py  nodes.py  state.py
app/agents/llm_client/: __init__.py  client.py
app/agents/retrieval/: __init__.py  chroma_retriever.py  embedder.py  protocol.py  sql_book_lookup.py
app/backend/config/: __init__.py  settings.py
app/backend/router/: admin_book_router.py  admin_doc_router.py  auth_router.py  book_router.py  chat_router.py  health_router.py  profile_router.py  research_router.py  seat_router.py
app/backend/schemas/: __init__.py  auth.py  book.py  chat.py  document.py  profile.py  research.py  seat.py
app/backend/service/: __init__.py  auth_service.py  book_service.py  chat_service.py  doc_service.py  profile_service.py  seat_service.py  workflow_service.py
app/chroma_data/: chroma.sqlite3
app/core/: __init__.py  cleanup.py  database.py  deps.py  lock.py  security.py
app/mcp_server/: __init__.py  auth.py  server.py  tools.py
app/models/: __init__.py  appointment.py  base.py  book.py  borrow_record.py  document.py  floor.py  seat.py  seat_time_slot.py  user.py  zone.py
app/observability/: __init__.py  logging.py  middleware.py
app/research_agents/: __init__.py  config.py  graph.py  nodes.py  state.py  tools.py
app/research_agents/adapters/: __init__.py  llm.py
app/research_agents/memory/: __init__.py  store.py
app/tasks/: __init__.py  celery_app.py  cleanup.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin_policies.py  appointments.py  auth.py  books.py  health.py  router.py  seats.py
backend/app/clients/: __init__.py  embedding_client.py  redis_client.py  rerank_client.py
backend/app/core/: __init__.py  concurrency.py  config.py  database.py  exceptions.py  observability.py  retry.py  security.py
backend/app/core/middleware/: __init__.py
backend/app/models/: __init__.py  appointment.py  base.py  book.py  enums.py  policy.py  seat.py  tenant.py  user.py
backend/app/rag/: __init__.py  bm25_index.py  bm25_retriever.py  chroma_store.py  chunker.py  dense_retriever.py  loaders.py  pipeline.py  rrf.py
backend/app/repositories/: __init__.py  appointment_repository.py  book_repository.py  policy_repository.py  seat_repository.py  user_repository.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  book.py  common.py  pagination.py  policy.py  seat.py
backend/app/services/: __init__.py  appointment_service.py  book_service.py  policy_service.py  user_service.py
backend/scripts/: __init__.py  init_db.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_appointments_api.py  test_auth_api.py  test_books_api.py  test_health.py  test_policies_api.py
backend/tests/unit/: __init__.py  test_chunker.py  test_concurrency.py  test_config.py  test_exceptions.py  test_loaders.py  test_password.py  test_retry.py  test_rrf.py  test_security.py
chroma_test_data/: chroma.sqlite3
deep_research_scaffold.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/postgres/: init.sql
docs/superpowers/plans/: 2026-06-28-library-service-plan-01-infrastructure.md  2026-06-28-library-service-plan-02-business-and-rag.md  2026-07-06-library-phase2a.md  2026-07-06-library-phase2b.md  2026-07-06-library-phase2c.md  2026-07-06-library-phase3-kb.md  2026-07-06-library-qa-phase1.md  2026-07-07-mcp-server.md  2026-07-07-observability.md  2026-07-07-profile-query.md  2026-07-07-real-llm-client.md
docs/superpowers/specs/: 2026-06-28-library-intelligent-service-design.md  2026-07-06-library-phase2a-design.md  2026-07-06-library-phase2b-design.md  2026-07-06-library-phase2c-design.md  2026-07-06-library-phase3-kb-design.md  2026-07-06-library-qa-design.md  2026-07-07-mcp-server-design.md  2026-07-07-observability-design.md  2026-07-07-profile-api-design.md  2026-07-07-profile-query-design.md  2026-07-07-real-llm-client-design.md
front/: index.html  package-lock.json  package.json  tsconfig.json
front/src/: App.vue
front/src/api/: auth.ts  client.ts  seats.ts
front/src/assets/: main.css
front/src/components/: BookingConfirmDialog.vue  SeatCard.vue  SeatGrid.vue  SeatLegend.vue  TimeSlotPicker.vue  ZoneChips.vue
front/src/composables/: useAuth.ts
front/src/router/: index.ts
front/src/views/: HomeView.vue  LoginView.vue  SeatDashboard.vue
migrations/: env.py
migrations/versions/: 22c744cbc6c6_add_borrow_records_table.py  5e8a1c2b3d4f_unify_time_slot_enum.py  5f8884470c81_initial_all_tables.py  b63a33f0daac_add_user_api_key.py  c58375a69ac1_initial_users_floors_zones_seats_seat_.py  d11085afd4d2_add_books_documents_admin.py
scripts/: seed.py
tests/: conftest.py  test_admin_book_api.py  test_admin_doc_api.py  test_auth_api.py  test_book_model.py  test_book_router.py  test_book_service.py  test_borrow_model.py  test_chat_api.py  test_chroma_retriever.py  test_cleanup.py  test_embedder.py  test_intent_classification.py  test_library_graph.py  test_lock.py  test_mcp_auth.py  test_mcp_integration.py  test_mcp_tools.py  test_observability.py  test_profile_api.py  test_profile_graph.py  test_profile_service.py  test_real_llm_client.py  test_seat_api.py  test_security.py  test_security_admin.py
