[project]
name = "deep-research-scaffold"
version = "0.1.0"
description = "Library Intelligent Service backend — FastAPI + LangGraph + RAG full-stack (aligned with CLAUDE.md tech stack)"
requires-python = ">=3.12"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ── Data validation ────────────────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # ── Auth — JWT HS256 (access 1h + refresh 30d) ─────────────────
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # ── Agent orchestration — LangGraph v1 (StateGraph + Command) ──
    "langgraph>=1.0.0",
    # ── LLM / Embedding / Rerank clients ───────────────────────────
    #   DeepSeek-V4-Flash  (OpenAI 兼容)               → openai SDK
    #   Qwen text-embedding-v2 (DashScope OpenAI 兼容) → openai SDK
    #   Qwen qwen3-rerank (DashScope 专用端点)          → dashscope SDK
    "openai>=1.40.0",
    "dashscope>=1.20.0",
    # ── Database — PostgreSQL 15 + asyncpg + SQLAlchemy 2.0 async ──
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # ── Cache & distributed lock — Redis 7 ─────────────────────────
    "redis>=5.0.0",
    # ── Async task queue — Celery 5 ────────────────────────────────
    "celery>=5.3.0",
    # ── RAG — vector DB (ChromaDB 0.5) ─────────────────────────────
    "chromadb>=0.5.0",
    # ── RAG — keyword search (BM25) ────────────────────────────────
    "whoosh>=2.7.4",
    "jieba>=0.42.1",
    # ── MCP — Model Context Protocol ───────────────────────────────
    #   langchain-mcp-adapters: 客户端调用
    #   fastmcp:                服务端独立进程(5 个 Tool)
    "langchain-mcp-adapters>=0.1.0",
    "fastmcp>=0.2.0",
    # ── Observability — OpenTelemetry SDK + Jaeger (OTLP/gRPC) ─────
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-celery>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    # ── Evaluation — Ragas ─────────────────────────────────────────
    #   上限 <0.4 规避 ragas 0.4.x 与 langchain 1.x 生态不兼容问题
    #   (0.4.x 顶层 import 强制依赖 langchain_community.chat_models.vertexai)
    "ragas>=0.2.0,<0.4.0",
    "langchain-google-vertexai>=2.0.0",
    #   ragas 顶层 import 还会触发 langchain_community.chat_models.vertexai,
    #   该模块在 langchain-community 0.4.x 已被移除(<0.4 仍存在)
    "langchain-community<0.4",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",                          # FastAPI TestClient
    "testcontainers[postgres,redis]>=4.0",  # 集成测试

    # Code quality
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
