[project]
name = "deep-research-scaffold"
version = "0.1.0"
description = "A reusable FastAPI + LangGraph deep research scaffold"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=1.2.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.0",
  "redis[hiredis]>=5.0",
  "celery[redis]>=5.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "fakeredis[lua]>=2.22",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
